--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@rainbow-me/rainbowkit": "^0.8.0",
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "@thirdweb-dev/react": "^3.6.7",
+    "@thirdweb-dev/sdk": "^3.6.7",
+    "@wagmi/core": "^0.8.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
-    "wagmi": "^0.9.2"
+    "wagmi": "^0.9.2",
+    "web3modal": "^1.9.10"
   }
 }
