feat: link type to addresses

--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "ethers": "^5.7.2",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
+    "@material-tailwind/react": "^1.2.4",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@thirdweb-dev/react": "^3.6.7",
     "@thirdweb-dev/sdk": "^3.6.7",
