--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "ethers": "^5.7.2",
-    "next": "13.0.6",
+    "next": "12.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@connext/nxtp-sdk": "^0.2.1-beta.15",
+    "@eth-optimism/sdk": "^1.8.0",
     "@material-tailwind/react": "^1.2.4",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@restart/ui": "^1.4.1",
@@ -25,6 +28,7 @@
     "@thirdweb-dev/sdk": "^3.6.7",
     "@wagmi/core": "^0.8.2",
     "autoprefixer": "^10.4.13",
+    "fs": "^0.0.1-security",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
     "wagmi": "^0.9.2",
